Change No downloads text

--- a/templates/home.html
+++ b/templates/home.html
@@ -257,7 +257,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>NO DOWNLOADS</h2>
+				<h2>SHARE A SIMPLE WEB LINK AND CLICK</h2>
 				<p>SHARE AND CLICK with A SIMPLE WEB LINK</p>
 				<img src="{% static 'image/download_hr.png' %}" alt="bottom_line">
 			</div>
