--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
 .video-content_mobile {
     display: none;
 }
+
 .shadow-button-3 {
     margin: 14px 0;
     font-size: 20px;
@@ -45,7 +46,13 @@
   }
   
 
-
+i.fa-solid.fa-expand {
+    font-size: 30px;
+    color: red;
+    position: absolute;
+    bottom: 15px;
+    right: 42px;
+}
 .borris_bazelais {
     text-align: right;
     font-weight: 600;
@@ -53,11 +60,11 @@
     font-size: 26px !IMPORTANT;
 }
 .no-dwonload_section {
-    background: #131418;
-    padding: 50px 0px 50px 0px;
+    padding: 30px 0px 30px 0px;
     width: 100%;
     text-align: center;
     /* background-image: url(../image/About-wndr-bg.jpg); */
+    background-image: url(../image/nodownloads_image.png);
 } 
 div#load-image-of-modal-subscibe {
     position: relative;
@@ -3107,7 +3114,7 @@ iframe {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgb(0 0 0 / 40%);
+    /* background: rgb(0 0 0 / 40%); */
 }
 
 img.game-icon-screen {
@@ -8200,6 +8207,7 @@ img.blog-section-img-tabs {
     /*---no download---*/
     .no-dwonload_section{
         padding: 40px 0px 40px 0px;
+        background: url(../image/no_downloads.png) !important;
     }
     .no-dwonload_section h2 {
         font-size: 32px;
