--- a/templates/home.html
+++ b/templates/home.html
@@ -262,7 +262,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>NO DOWNLOAD</h2>
+				<h2>NO DOWNLOADS</h2>
 				<p>SHARE A SIMPLE WEB LINK AND CLICK</p>
 				<img src="{% static 'image/download_hr.png' %}" alt="bottom_line">
 			</div>
@@ -272,6 +272,7 @@
 	<!-- game-play start -->
 	<!-- game-play start -->
 	<div class="wndr_land_colosiusm">
+		
 	<div class="video-home-content">
 		<i class="fa fa-volume-off" id="audio-home-control" aria-hidden="true"></i>
 		<div class="circle" style="animation-delay: 0s"></div>
@@ -279,13 +280,20 @@
 		<div class="circle" style="animation-delay: 2s"></div>
 		<div class="circle" style="animation-delay: 3s"></div>
 	</div>
+
 	<div class="gamePlayer">			
-				<video id="myVideo" class="video video_desktop_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player.jpg' %}"controlslist="nodownload noplaybackrate">
-				<source src="{% if video_obj %}{{video_obj.desktop_bottom_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}" type="video/mp4"></video>
-				<video id="myVideo2" class="video video_mbl_home" width="100%" height="100%" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" controlslist="nodownload noplaybackrate" style="object-fit:cover;background-position: bottom center;" webkit-playsinline="true" playsinline="true">
+				<video id="myVideo" class="video video_desktop_home fullscr" width="100%" height="100%" preload='auto'  poster="{% static 'image/game-player.jpg' %}" controlslist="nodownload noplaybackrate">
+				<source src="{% if video_obj %}{{video_obj.desktop_bottom_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}" type="video/mp4"> </video> 				
+			 <video id="myVideo2" class="video_mbl_home fullscr-mobile " width="100%" height="100%" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" controlslist="nodownload noplaybackrate" style="object-fit:cover;background-position: bottom center;" webkit-playsinline="true" playsinline="true">
 			
 					<source src="{% if video_obj %}{{video_obj.mobile_bottom_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}" type="video/mp4"></video>
-				</video>	
+				</video>
+				<i class="fa-solid fa-expand "onclick="openFullscreen();"></i>
+
+				
+{% comment %} 		
+				<i class="bi bi-fullscreen" style="font-size:48px;color:red">befhbejbfb</i> {% endcomment %}
+				
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -314,10 +322,10 @@
 								<div class="frst_img">
 								<img src="{% static 'image/play_ic.png' %}" alt="gamePlayer-icon-1" id="play_button">
 								</div>
-								<div class="bnnr_img desktop_cover_bnr">
+								 <div class="bnnr_img desktop_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
 									<img src="{% static 'image/game-player.jpg' %}" alt="gamePlayer-icon-1" id="play_button">
-								</div>
+								</div> 
 								<div class="bnnr_img mbl_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
 									<img src="{% static 'image/game-player_mbl.png' %}" alt="gamePlayer-icon-1" id="play_button" style="object-fit:cover;">
@@ -340,6 +348,8 @@
 	</div>
 </div>
 </div>
+
+
 	<!-- game-play end -->
 	<div class="no-dwonload_section">
 		<div class="container">
