--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="ScreenOrientation" >
 	<title>Wndr.Land</title>
 
 	<!-- slick css -->
@@ -34,6 +35,11 @@
 	<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
 
 </head>
+<style>
+
+body{ background:none important }
+</style>
+
 
 <body>
 
@@ -48,7 +54,7 @@
 		<div class="banner_video_section">
 			<video class="banner_desktop_video" id="video2" width="100%" height="100%" preload='none'
 				poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source src="{% if video_obj %}{{video_obj.desktop_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/PC_version_10mbps.mp4 {%endif%}" type="video/mp4">
+				<source id="vid2_source" src="{% if video_obj %}{{video_obj.desktop_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/PC_version_10mbps.mp4 {%endif%}" type="video/mp4">
 				<!-- "{% static 'video/PC_version_10mbps_VP8.webm' %}" -->
 			</video>
 			<video class="banner_mobile_video" id="video21" width="100%" height="100%" preload='none'
@@ -686,16 +692,6 @@ $(window).scroll(function() {
 
 	
  </script>
- <!-- <script>
-	$(document).ready(function(){
-		window.onload=function(){
-     $("body").css("background", "yellow"); 
-
-	}
-})
-		
-();
- </script> -->
 
 
 <script>
@@ -770,6 +766,17 @@ $(window).scroll(function() {
 })
 	</script>
 
+
+<script>
+$(document).ready(function(){
+if ($(window).width() < 768) {
+var video = document.getElementById('video2');
+var source = document.getElementById('vid2_source');
+source.setAttribute('src', '');
+}
+})
+
+</script>
 
 
 </body>
