--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="ScreenOrientation" >
+	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
 	<title>Wndr.Land</title>
 
 	<!-- slick css -->
