--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2942,6 +2942,19 @@ h2 {
 .hide_mbl_vision{
     display:none;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+    html {
+      transform: rotate(-90deg);
+      transform-origin: left top;
+      width: 100vh;
+      overflow-x: hidden;
+      position: absolute;
+      top: 100%;
+      left: 0;
+    }
+  }
+
 /*--Roadmap page End----*/
 @media only screen and (min-width: 2048px) {}
 
