--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
+	
+	
 	<title>Wndr.Land</title>
 
 	<!-- slick css -->
@@ -59,7 +60,7 @@ body{ background:none important }
 			</video>
 			<video class="banner_mobile_video" id="video21" width="100%" height="100%" preload='none'
 				poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
-				<source src="{% if video_obj %}{{video_obj.mobile_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/Mobile_10mbps.mp4{%endif%}" type="video/mp4">
+				<source  id="vid21_source" src="{% if video_obj %}{{video_obj.mobile_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/Mobile_10mbps.mp4{%endif%}" type="video/mp4">
 				<!-- "{% static 'video/Mobile_10mbps_VP8_003.webm' %}" -->
 			</video>
 			<div class="video-content">
@@ -777,6 +778,28 @@ source.setAttribute('src', '');
 })
 
 </script>
+
+
+<script>
+	$(document).ready(function(){
+	if ($(window).width() > 768) {
+	var video = document.getElementById("video21");
+	var source = document.getElementById('vid21_source');
+	source.setAttribute('src', '');
+	}
+	})
+	
+	</script>
+
+	<!-- <script>
+		$(window).bind("orientationchange", function(){
+    var orientation = window.orientation;
+    var new_orientation = (orientation) ? 0 : 180 + orientation;
+    $('body').css({
+        "-webkit-transform": "rotate(" + new_orientation + "deg)"
+    });
+});
+	</script> -->
 
 
 </body>
