--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2943,17 +2943,6 @@ h2 {
     display:none;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
-    html {
-      transform: rotate(-90deg);
-      transform-origin: left top;
-      width: 100vh;
-      overflow-x: hidden;
-      position: absolute;
-      top: 100%;
-      left: 0;
-    }
-  }
 
 /*--Roadmap page End----*/
 @media only screen and (min-width: 2048px) {}
@@ -15546,6 +15535,18 @@ img.blog-section-img-tabs {
         top: 45px;
     }
 }
+
+/* @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+    html {
+      transform: rotate(-90deg);
+      transform-origin: left top;
+      width: 100vh;
+      overflow-x: hidden;
+      position: absolute;
+      top: 100%;
+      left: 0;
+    }
+  }  */
 @media only screen and (min-width: 576px) and (max-width: 577px)  {
     .team_member_section {
         height: 86%!important;
