--- a/templates/base.html
+++ b/templates/base.html
@@ -774,7 +774,7 @@ if ($(window).width() < 767) {
 var video = document.getElementById('video2');
 var source = document.getElementById('vid2_source');
 source.setAttribute('src', '');
-screen.lockOrientation("landscape");
+// screen.lockOrientation("landscape");
 }
 })
 
