--- a/templates/base.html
+++ b/templates/base.html
@@ -818,6 +818,13 @@ if ($(window).width() > 768) {
 //   else if (de.msRequestFullscreen) { de.msRequestFullscreen(); }
 //   screen.orientation.lock('landscape');
 //   console.log("screen locked")
+$(window).bind("orientationchange", function(){
+    var orientation = window.orientation;
+    var new_orientation = (orientation) ? 0 : 180 + orientation;
+    $('body').css({
+        "-webkit-transform": "rotate(" + new_orientation + "deg)"
+    });
+});
 </script>
 	
 
